# advent-of-code

./: .gitignore  Cargo.toml
aoc/: Cargo.toml
aoc/src/: grid.rs  lib.rs  vec2.rs
aoc2024/: Cargo.toml  build.rs
aoc2024/src/: lib.rs
aoc2024/src/input/: README
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
