[workspace]
resolver = "2"
members = ["aoc", "aoc2024"]
default-members = ["aoc2024"]

[workspace.package]
version = "0.0.0"
authors = ["Vaardvaark <190547174+vaardvaark@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vaardvaark/advent-of-code"
publish = false
